--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.18",
     "class-variance-authority": "^0.7.1",
+    "postcss": "^8.4.47",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
